--- a/staticfiles/css/global.css
+++ b/staticfiles/css/global.css
@@ -28,7 +28,7 @@ body > *:not(.modal, .modal-backdrop, .navbar, .notification) {
 
 .notification {
     position: fixed;
-    top: 20px; /* Adjust this value as needed */
+    top: 20px; 
     left: 50%;
     transform: translateX(-50%);
     padding: 10px 20px;
